# FinAgent-Pro

./: .coverage  README.md  docker-compose.yml  pyproject.toml  test_api.py  test_auth.py  test_auth_debug.py  test_dash.py  test_inspect.py  test_post.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  api.py  database.py  models.py  requirements.txt  test_yf.py
backend/agent/: analytics_router.py  auth_router.py  controller.py  portfolio_router.py  router.py  schemas.py  watchlist_router.py
backend/services/: __init__.py  analytics_service.py  dashboard_service.py  news_service.py
backend/tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_security.py  test_services.py
backend/utils/: auth.py  cache.py  constants.py  limiter.py  logger.py  settings.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js  vitest.setup.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AiInsight.jsx  CalendarPanel.jsx  ChatMessage.jsx  ErrorBoundary.jsx  FundamentalPanel.jsx  HeatmapPanel.jsx  IndexCard.jsx  MainChart.jsx  Navbar.jsx  NewsCard.jsx  RiskGauge.jsx  RsiChart.jsx  SectorHeatmap.jsx  StockCard.jsx  TechnicalChart.jsx  ToastContainer.jsx  Tour.jsx  TransactionModal.jsx  VolumeChart.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx  ToastContext.jsx
frontend/src/hooks/: useKeyPress.js
frontend/src/pages/: Analytics.jsx  Assistant.jsx  Dashboard.jsx  Login.jsx  News.jsx  Portfolio.jsx  Register.jsx
frontend/src/services/: api.js
(+6 files in other folders)
