[project]
name = "finagent-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.5",
    "anthropic>=0.84.0",
    "fastapi>=0.133.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]
